--- a/Ch4/04_FastText_Example.ipynb
+++ b/Ch4/04_FastText_Example.ipynb
@@ -6,7 +6,7 @@
     "id": "6FIToZHAhz2O"
    },
    "source": [
-    "In this notebook we will demonstrate using the fastText library to perform text classificatoin on the dbpedie data which can we downloaded from [here](https://github.com/le-scientifique/torchDatasets/raw/master/dbpedia_csv.tar.gz). <br>fastText is a library for learning of word embeddings and text classification created by Facebook's AI Research (FAIR) lab. The model allows to create an unsupervised learning or supervised learning algorithm for obtaining vector representations for words. Facebook makes available pretrained models for 294 languages(source: [wiki](https://en.wikipedia.org/wiki/FastText)).<br>\n",
+    "In this notebook we will demonstrate using the fastText library to perform text classificatoin on the dbpedia data which can we downloaded from [here](https://github.com/le-scientifique/torchDatasets/raw/master/dbpedia_csv.tar.gz). <br>fastText is a library for learning of word embeddings and text classification created by Facebook's AI Research (FAIR) lab. The model allows to create an unsupervised learning or supervised learning algorithm for obtaining vector representations for words. Facebook makes available pretrained models for 294 languages(source: [wiki](https://en.wikipedia.org/wiki/FastText)).<br>\n",
     "**Note**: This notebook uses an older version of fasttext."
    ]
   },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "YKgZXvTGb61z"
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -113,44 +113,7 @@
     "id": "l6CfW7C3L4EB",
     "outputId": "debf3639-77d2-4a2c-8aa1-3ff8438b9585"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2021-07-16 08:57:35--  https://github.com/le-scientifique/torchDatasets/raw/master/dbpedia_csv.tar.gz\n",
-      "Resolving github.com (github.com)... 140.82.121.4\n",
-      "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
-      "HTTP request sent, awaiting response... 301 Moved Permanently\n",
-      "Location: https://github.com/srhrshr/torchDatasets/raw/master/dbpedia_csv.tar.gz [following]\n",
-      "--2021-07-16 08:57:35--  https://github.com/srhrshr/torchDatasets/raw/master/dbpedia_csv.tar.gz\n",
-      "Reusing existing connection to github.com:443.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://raw.githubusercontent.com/srhrshr/torchDatasets/master/dbpedia_csv.tar.gz [following]\n",
-      "--2021-07-16 08:57:35--  https://raw.githubusercontent.com/srhrshr/torchDatasets/master/dbpedia_csv.tar.gz\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 68431223 (65M) [application/octet-stream]\n",
-      "Saving to: ‘DATAPATH/dbpedia_csv.tar.gz’\n",
-      "\n",
-      "dbpedia_csv.tar.gz  100%[===================>]  65.26M   206MB/s    in 0.3s    \n",
-      "\n",
-      "2021-07-16 08:57:42 (206 MB/s) - ‘DATAPATH/dbpedia_csv.tar.gz’ saved [68431223/68431223]\n",
-      "\n",
-      "dbpedia_csv/\n",
-      "dbpedia_csv/test.csv\n",
-      "dbpedia_csv/classes.txt\n",
-      "dbpedia_csv/train.csv\n",
-      "dbpedia_csv/readme.txt\n",
-      "total 66M\n",
-      "drwxr-xr-x 3 root root 4.0K Jul 16 08:57 .\n",
-      "drwxr-xr-x 1 root root 4.0K Jul 16 08:57 ..\n",
-      "drwxrwxr-x 2 1000 1000 4.0K Mar 29  2015 dbpedia_csv\n",
-      "-rw-r--r-- 1 root root  66M Jul 16 08:57 dbpedia_csv.tar.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try :\n",
     "    \n",
@@ -188,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -218,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -296,20 +259,23 @@
        "</div>"
       ],
       "text/plain": [
-       "   class  ... class_name\n",
-       "0      1  ...    Company\n",
-       "1      1  ...    Company\n",
-       "2      1  ...    Company\n",
-       "3      1  ...    Company\n",
-       "4      1  ...    Company\n",
+       "   class                               name  \\\n",
+       "0      1                   E. D. Abbott Ltd   \n",
+       "1      1                     Schwan-Stabilo   \n",
+       "2      1                         Q-workshop   \n",
+       "3      1  Marvell Software Solutions Israel   \n",
+       "4      1        Bergan Mercy Medical Center   \n",
        "\n",
-       "[5 rows x 4 columns]"
+       "                                         description class_name  \n",
+       "0   Abbott of Farnham E D Abbott Limited was a Br...    Company  \n",
+       "1   Schwan-STABILO is a German maker of pens for ...    Company  \n",
+       "2   Q-workshop is a Polish company located in Poz...    Company  \n",
+       "3   Marvell Software Solutions Israel known as RA...    Company  \n",
+       "4   Bergan Mercy Medical Center is a hospital loc...    Company  "
       ]
      },
-     "execution_count": 6,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 4,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -340,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -352,27 +318,25 @@
     {
      "data": {
       "text/plain": [
-       "Athlete                   40000\n",
-       "MeanOfTransportation      40000\n",
-       "Film                      40000\n",
-       "Artist                    40000\n",
-       "Building                  40000\n",
        "Company                   40000\n",
-       "Plant                     40000\n",
-       "Album                     40000\n",
+       "EducationalInstitution    40000\n",
+       "Artist                    40000\n",
+       "Athlete                   40000\n",
+       "OfficeHolder              40000\n",
+       "MeanOfTransportation      40000\n",
+       "Building                  40000\n",
        "NaturalPlace              40000\n",
        "Village                   40000\n",
-       "EducationalInstitution    40000\n",
        "Animal                    40000\n",
+       "Plant                     40000\n",
+       "Album                     40000\n",
+       "Film                      40000\n",
        "WrittenWork               40000\n",
-       "OfficeHolder              40000\n",
        "Name: class_name, dtype: int64"
       ]
      },
-     "execution_count": 7,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 5,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -389,8 +353,8 @@
    "outputs": [],
    "source": [
     "# Lets do some cleaning of this text\n",
-    "def clean_it(text,normalize=True):\n",
-    "    # Replacing possible issues with data. We can add or reduce the replacemtent in this chain\n",
+    "def clean_it(text, normalize=True):\n",
+    "    # Replacing possible issues with data. We can add or reduce the replacement in this chain\n",
     "    s = str(text).replace(',',' ').replace('\"','').replace('\\'',' \\' ').replace('.',' . ').replace('(',' ( ').\\\n",
     "            replace(')',' ) ').replace('!',' ! ').replace('?',' ? ').replace(':',' ').replace(';',' ').lower()\n",
     "    \n",
@@ -548,8 +512,11 @@
    "name": "04_FastText_Example.ipynb",
    "provenance": []
   },
+  "interpreter": {
+   "hash": "71663d8f81a2166c01e5d98f8e08b828788e16ec40bd0e4c49b4bd40a996e42b"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.9 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -563,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
