Trained fasttext model

--- a/Ch4/04_FastText_Example.ipynb
+++ b/Ch4/04_FastText_Example.ipynb
@@ -12,91 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "UBnT5t_LiCU2",
-    "outputId": "ca0bcea9-75a7-4237-e58e-154c3d72e89f"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas==1.1.5 in /usr/local/lib/python3.7/dist-packages (1.1.5)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas==1.1.5) (2018.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.1.5) (2.8.1)\n",
-      "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas==1.1.5) (1.19.5)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas==1.1.5) (1.15.0)\n",
-      "Collecting wget==3.2\n",
-      "  Downloading https://files.pythonhosted.org/packages/47/6a/62e288da7bcda82b935ff0c6cfe542970f04e29c756b0e147251b2fb251f/wget-3.2.zip\n",
-      "Building wheels for collected packages: wget\n",
-      "  Building wheel for wget (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "  Created wheel for wget: filename=wget-3.2-cp37-none-any.whl size=9675 sha256=0e1e014b6bf086637aea4bfe15707b7d8d825e7280cd2f9c6ec1943ef00e80c7\n",
-      "  Stored in directory: /root/.cache/pip/wheels/40/15/30/7d8f7cea2902b4db79e3fea550d7d7b85ecb27ef992b618f3f\n",
-      "Successfully built wget\n",
-      "Installing collected packages: wget\n",
-      "Successfully installed wget-3.2\n",
-      "Collecting fasttext==0.9.2\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f8/85/e2b368ab6d3528827b147fdb814f8189acc981a4bc2f99ab894650e05c40/fasttext-0.9.2.tar.gz (68kB)\n",
-      "\u001b[K     |████████████████████████████████| 71kB 6.8MB/s \n",
-      "\u001b[?25hRequirement already satisfied: pybind11>=2.2 in /usr/local/lib/python3.7/dist-packages (from fasttext==0.9.2) (2.6.2)\n",
-      "Requirement already satisfied: setuptools>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from fasttext==0.9.2) (57.0.0)\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from fasttext==0.9.2) (1.19.5)\n",
-      "Building wheels for collected packages: fasttext\n",
-      "  Building wheel for fasttext (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "  Created wheel for fasttext: filename=fasttext-0.9.2-cp37-cp37m-linux_x86_64.whl size=3091748 sha256=f30effec512519a72b11f0eaf7aa8a6b57df1643345f8e51bf7b1cb010552792\n",
-      "  Stored in directory: /root/.cache/pip/wheels/98/ba/7f/b154944a1cf5a8cee91c154b75231136cc3a3321ab0e30f592\n",
-      "Successfully built fasttext\n",
-      "Installing collected packages: fasttext\n",
-      "Successfully installed fasttext-0.9.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# To install only the requirements of this notebook, uncomment the lines below and run this cell\n",
-    "\n",
-    "# ===========================\n",
-    "\n",
-    "!pip install pandas==1.1.5\n",
-    "!pip install wget==3.2\n",
-    "!pip install fasttext==0.9.2\n",
-    "\n",
-    "# ==========================="
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "id": "zrBi6bvbiCU4"
-   },
-   "outputs": [],
-   "source": [
-    "# To install the requirements for the entire chapter, uncomment the lines below and run this cell\n",
-    "\n",
-    "# ===========================\n",
-    "\n",
-    "# try:\n",
-    "#     import google.colab\n",
-    "#     !curl  https://raw.githubusercontent.com/practical-nlp/practical-nlp/master/Ch4/ch4-requirements.txt | xargs -n 1 -L 1 pip install\n",
-    "# except ModuleNotFoundError:\n",
-    "#     !pip install -r \"ch4-requirements.txt\"\n",
-    "\n",
-    "# ==========================="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {
     "id": "YKgZXvTGb61z"
    },
    "outputs": [],
    "source": [
-    "#necessary imports\n",
     "import os\n",
     "import pandas as pd\n",
     "import wget\n",
@@ -105,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -151,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -181,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -274,7 +195,7 @@
        "4   Bergan Mercy Medical Center is a hospital loc...    Company  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -335,7 +256,7 @@
        "Name: class_name, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "id": "Sn-3kIqMb62d"
    },
@@ -360,20 +281,21 @@
     "    \n",
     "    # normalizing / encoding the text\n",
     "    if normalize:\n",
+    "        # This is to do with unicode compatibility.  See: https://docs.python.org/3/library/unicodedata.html\n",
     "        s = s.normalize('NFKD').str.encode('ascii','ignore').str.decode('utf-8')\n",
     "    \n",
     "    return s\n",
     "\n",
     "# Now lets define a small function where we can use above cleaning on datasets\n",
-    "def clean_df(data, cleanit= False, shuffleit=False, encodeit=False, label_prefix='__class__'):\n",
+    "def clean_df(data, cleanit=False, shuffleit=False, encodeit=False, label_prefix='__class__'):\n",
     "    # Defining the new data\n",
     "    df = data[['name','description']].copy(deep=True)\n",
     "    df['class'] = label_prefix + data['class'].astype(str) + ' '\n",
     "    \n",
     "    # cleaning it\n",
     "    if cleanit:\n",
-    "        df['name'] = df['name'].apply(lambda x: clean_it(x,encodeit))\n",
-    "        df['description'] = df['description'].apply(lambda x: clean_it(x,encodeit))\n",
+    "        df['name'] = df['name'].apply(lambda x: clean_it(x, encodeit))\n",
+    "        df['description'] = df['description'].apply(lambda x: clean_it(x, encodeit))\n",
     "    \n",
     "    # shuffling it\n",
     "    if shuffleit:\n",
@@ -384,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -397,8 +319,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.38 s, sys: 193 ms, total: 4.57 s\n",
-      "Wall time: 4.63 s\n"
+      "CPU times: total: 2.78 s\n",
+      "Wall time: 2.78 s\n"
      ]
     }
    ],
@@ -411,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "id": "imMZ9-Bkb62t"
    },
@@ -436,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -449,8 +371,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1h 3min 10s, sys: 12.8 s, total: 1h 3min 23s\n",
-      "Wall time: 32min 17s\n"
+      "CPU times: total: 59min 15s\n",
+      "Wall time: 14min 53s\n"
      ]
     }
    ],
@@ -464,12 +386,12 @@
     "There are several other parameters which can be seen in: \n",
     "https://pypi.org/project/fasttext/\n",
     "\"\"\"\n",
-    "model = train_supervised(input=train_file, label=\"__class__\", lr=1.0, epoch=75, loss='ova', wordNgrams=2, dim=200, thread=2, verbose=100)"
+    "model = train_supervised(input=train_file, label=\"__class__\", lr=1.0, epoch=75, loss='ova', wordNgrams=2, dim=200, thread=4, verbose=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -482,11 +404,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Samples: 70000 Precision@1 : 92.2486 Recall@1 : 92.2486\n",
-      "Test Samples: 70000 Precision@2 : 48.5014 Recall@2 : 97.0029\n",
-      "Test Samples: 70000 Precision@3 : 32.5619 Recall@3 : 97.6857\n",
-      "Test Samples: 70000 Precision@4 : 24.4968 Recall@4 : 97.9871\n",
-      "Test Samples: 70000 Precision@5 : 19.6420 Recall@5 : 98.2100\n"
+      "Test Samples: 70000 Precision@1 : 98.3700 Recall@1 : 98.3700\n",
+      "Test Samples: 70000 Precision@2 : 49.5686 Recall@2 : 99.1371\n",
+      "Test Samples: 70000 Precision@3 : 33.0624 Recall@3 : 99.1871\n",
+      "Test Samples: 70000 Precision@4 : 24.8139 Recall@4 : 99.2557\n",
+      "Test Samples: 70000 Precision@5 : 19.8740 Recall@5 : 99.3700\n"
      ]
     }
    ],
@@ -504,6 +426,104 @@
    "source": [
     "Try training a classifier on this dataset with, say, LogisticRegression to realize how fast fastText is! 93% Precision and Recall are hard numbers to beat, too!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ty ku</td>\n",
+       "      <td>ty ku /taɪkuː/ is an american alcoholic bever...</td>\n",
+       "      <td>__class__1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>odd lot entertainment</td>\n",
+       "      <td>oddlot entertainment founded in 2001 by longt...</td>\n",
+       "      <td>__class__1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>henkel</td>\n",
+       "      <td>henkel ag &amp; company kgaa operates worldwide w...</td>\n",
+       "      <td>__class__1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>goat store</td>\n",
+       "      <td>the goat store  ( games of all type store )  ...</td>\n",
+       "      <td>__class__1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ragwing aircraft designs</td>\n",
+       "      <td>ragwing aircraft designs  ( also called the r...</td>\n",
+       "      <td>__class__1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       name  \\\n",
+       "0                     ty ku   \n",
+       "1     odd lot entertainment   \n",
+       "2                    henkel   \n",
+       "3                goat store   \n",
+       "4  ragwing aircraft designs   \n",
+       "\n",
+       "                                         description        class  \n",
+       "0   ty ku /taɪkuː/ is an american alcoholic bever...  __class__1   \n",
+       "1   oddlot entertainment founded in 2001 by longt...  __class__1   \n",
+       "2   henkel ag & company kgaa operates worldwide w...  __class__1   \n",
+       "3   the goat store  ( games of all type store )  ...  __class__1   \n",
+       "4   ragwing aircraft designs  ( also called the r...  __class__1   "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test_cleaned.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
