--- a/Ch4/04_FastText_Example.ipynb
+++ b/Ch4/04_FastText_Example.ipynb
@@ -429,7 +429,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 18.7 s\n",
+      "Wall time: 18.7 s\n",
+      "done loading Word2Vec\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gensim.models import Word2Vec, KeyedVectors\n",
+    "#Load W2V model. This will take some time. \n",
+    "path_to_model = \"GoogleNews-vectors-negative300.bin\"\n",
+    "%time w2v_model = KeyedVectors.load_word2vec_format(path_to_model, binary=True)\n",
+    "print('done loading Word2Vec')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Inspect the model\n",
+    "word2vec_vocab = w2v_model.key_to_index.keys()\n",
+    "word2vec_vocab_lower = [item.lower() for item in word2vec_vocab]\n",
+    "print(len(word2vec_vocab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -461,32 +504,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ty ku</td>\n",
-       "      <td>ty ku /taɪkuː/ is an american alcoholic bever...</td>\n",
+       "      <td>e .  d .  abbott ltd</td>\n",
+       "      <td>abbott of farnham e d abbott limited was a br...</td>\n",
        "      <td>__class__1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>odd lot entertainment</td>\n",
-       "      <td>oddlot entertainment founded in 2001 by longt...</td>\n",
+       "      <td>schwan-stabilo</td>\n",
+       "      <td>schwan-stabilo is a german maker of pens for ...</td>\n",
        "      <td>__class__1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>henkel</td>\n",
-       "      <td>henkel ag &amp; company kgaa operates worldwide w...</td>\n",
+       "      <td>q-workshop</td>\n",
+       "      <td>q-workshop is a polish company located in poz...</td>\n",
        "      <td>__class__1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>goat store</td>\n",
-       "      <td>the goat store  ( games of all type store )  ...</td>\n",
+       "      <td>marvell software solutions israel</td>\n",
+       "      <td>marvell software solutions israel known as ra...</td>\n",
        "      <td>__class__1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ragwing aircraft designs</td>\n",
-       "      <td>ragwing aircraft designs  ( also called the r...</td>\n",
+       "      <td>bergan mercy medical center</td>\n",
+       "      <td>bergan mercy medical center is a hospital loc...</td>\n",
        "      <td>__class__1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -494,28 +537,199 @@
        "</div>"
       ],
       "text/plain": [
-       "                       name  \\\n",
-       "0                     ty ku   \n",
-       "1     odd lot entertainment   \n",
-       "2                    henkel   \n",
-       "3                goat store   \n",
-       "4  ragwing aircraft designs   \n",
+       "                                name  \\\n",
+       "0               e .  d .  abbott ltd   \n",
+       "1                     schwan-stabilo   \n",
+       "2                         q-workshop   \n",
+       "3  marvell software solutions israel   \n",
+       "4        bergan mercy medical center   \n",
        "\n",
        "                                         description        class  \n",
-       "0   ty ku /taɪkuː/ is an american alcoholic bever...  __class__1   \n",
-       "1   oddlot entertainment founded in 2001 by longt...  __class__1   \n",
-       "2   henkel ag & company kgaa operates worldwide w...  __class__1   \n",
-       "3   the goat store  ( games of all type store )  ...  __class__1   \n",
-       "4   ragwing aircraft designs  ( also called the r...  __class__1   "
+       "0   abbott of farnham e d abbott limited was a br...  __class__1   \n",
+       "1   schwan-stabilo is a german maker of pens for ...  __class__1   \n",
+       "2   q-workshop is a polish company located in poz...  __class__1   \n",
+       "3   marvell software solutions israel known as ra...  __class__1   \n",
+       "4   bergan mercy medical center is a hospital loc...  __class__1   "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_test_cleaned.head()"
+    "df_train_cleaned.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = list(df_train_cleaned[\"name\"] +  \" \" + df_train_cleaned[\"description\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from string import punctuation\n",
+    "\n",
+    "#preprocess the text.\n",
+    "def preprocess_corpus(texts):\n",
+    "    mystopwords = set(stopwords.words(\"english\"))\n",
+    "    def remove_stops_digits(tokens):\n",
+    "        #Nested function that lowercases, removes stopwords and digits from a list of tokens\n",
+    "        return [token.lower() for token in tokens if token.lower() not in mystopwords and not token.isdigit()\n",
+    "               and token not in punctuation]\n",
+    "    #This return statement below uses the above function to process twitter tokenizer output further. \n",
+    "    return [remove_stops_digits(word_tokenize(text)) for text in texts]\n",
+    " \n",
+    "texts_processed = preprocess_corpus(texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "560000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# Creating a feature vector by averaging all embeddings for all sentences\n",
+    "def embedding_feats(list_of_lists):\n",
+    "    DIMENSION = 300\n",
+    "    zero_vector = np.zeros(DIMENSION)\n",
+    "    feats = []\n",
+    "    for tokens in list_of_lists:\n",
+    "        feat_for_this =  np.zeros(DIMENSION)\n",
+    "        count_for_this = 0 + 1e-5 # to avoid divide-by-zero \n",
+    "        for token in tokens:\n",
+    "            if token in w2v_model:\n",
+    "                feat_for_this += w2v_model[token]\n",
+    "                count_for_this +=1\n",
+    "        if(count_for_this!=0):\n",
+    "            feats.append(feat_for_this/count_for_this) \n",
+    "        else:\n",
+    "            feats.append(zero_vector)\n",
+    "    return feats\n",
+    "\n",
+    "\n",
+    "train_vectors = embedding_feats(texts_processed)\n",
+    "print(len(train_vectors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\willi\\repos\\practical-nlp-code\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:444: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(random_state=42)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression(random_state=42)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "classifier = LogisticRegression(random_state=42)\n",
+    "classifier.fit(train_vectors, df_train_cleaned[\"class\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70000\n"
+     ]
+    }
+   ],
+   "source": [
+    "texts_test = list(df_test_cleaned[\"name\"] +  \" \" + df_test_cleaned[\"description\"])\n",
+    "texts_test_processed = preprocess_corpus(texts_test)\n",
+    "test_vectors = embedding_feats(texts_test_processed)\n",
+    "print(len(test_vectors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.9666142857142858\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      " __class__1        0.93      0.92      0.93      5000\n",
+      "__class__10        0.98      0.98      0.98      5000\n",
+      "__class__11        0.98      0.98      0.98      5000\n",
+      "__class__12        0.97      0.98      0.97      5000\n",
+      "__class__13        0.97      0.97      0.97      5000\n",
+      "__class__14        0.93      0.93      0.93      5000\n",
+      " __class__2        0.97      0.98      0.97      5000\n",
+      " __class__3        0.93      0.91      0.92      5000\n",
+      " __class__4        0.99      0.99      0.99      5000\n",
+      " __class__5        0.97      0.97      0.97      5000\n",
+      " __class__6        0.97      0.98      0.98      5000\n",
+      " __class__7        0.96      0.96      0.96      5000\n",
+      " __class__8        0.99      0.99      0.99      5000\n",
+      " __class__9        0.99      0.99      0.99      5000\n",
+      "\n",
+      "    accuracy                           0.97     70000\n",
+      "   macro avg       0.97      0.97      0.97     70000\n",
+      "weighted avg       0.97      0.97      0.97     70000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy: \", classifier.score(test_vectors, df_test_cleaned[\"class\"]))\n",
+    "preds = classifier.predict(test_vectors)\n",
+    "print(classification_report(df_test_cleaned[\"class\"], preds))"
    ]
   },
   {
